--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 # Created by .ignore support plugin (hsz.mobi)
 .idea
-db.sqlite3
 *.iml
+*.pyc
+*~
+__pycache__
 myvenv
+db.sqlite3
+/static
+.DS_Store
